update colour bg

--- a/index.html
+++ b/index.html
@@ -9,10 +9,12 @@ MacID: Caii2
 <head>
     <title>Ivan Cai Lab #1</title>
     <style>
+        
         body {font-family: Arial;}
         header{padding: 10px;font-family: 'Times New Roman';display:flex;align-items: center;}
         h1 {font-size: 30px;margin:0px} 
         img {width:100px; height:100px;margin-right:4ch;}
+        section {background-color: #f6e0b5;}
 
     </style>
 </head>
