--- a/index.html
+++ b/index.html
@@ -24,6 +24,10 @@ MacID: Caii2
             flex-wrap: wrap;
         }
         header h1{font-size: clamp(50px, 5vw, 100px); font-family: 'Fredoka One';}
+        introduction{
+            padding: 0 2rem;
+            margin-top: 120px;
+        }
         .header-links {
             display: flex;
             gap: 15px; /* Space between buttons */
