better links and buttons

--- a/index.html
+++ b/index.html
@@ -32,11 +32,25 @@ MacID: Caii2
             display: flex;
             gap: 15px; /* Space between buttons */
             margin-left: auto; /* Pushes buttons to the right */
+            
         }
 
        .button{
             display: inline-block;
-            padding: 12px 30px; 
+            padding: 12px 30px; ; 
+            font-size: 18px;
+            font-weight: bold;
+            color: #ccd5ae; 
+            background-color: black; 
+            border: none;
+            border-radius: 30px;
+            text-decoration: none; 
+            text-align: center;
+            transition: background 0.3s ease-in-out, color 0.3s ease-in-out;
+        }
+        .sitelinks{
+            display: inline-block;
+            padding: 4px 10px; 
             font-size: 18px;
             font-weight: bold;
             color: #ccd5ae; 
@@ -104,7 +118,7 @@ MacID: Caii2
             <li>Designed and lead Arduino projects utilizing breadboards, LEDs, resistors and other electrical components to demonstrate electricity concepts </li>
             <li>Utilized effective communication engaging with 300 campers (aged 8-15) instructing and building projects relating to engineering, laws of motion, physics concepts, electricity, electronics and chemical reactions. </li>
         </ul>
-        <a href="https://www.thesteamproject.ca" target="_blank">www.thesteamproject.ca</a>
+        <a href="https://www.thesteamproject.ca" class="sitelinks" target="_blank">www.thesteamproject.ca</a>
         <br/>
         <b><i>Roboyantrix Inc Co-op</i></b>
         <ul>
@@ -112,7 +126,7 @@ MacID: Caii2
             <li>Assisted in the development of the company website through WordPress creating an advertising and e-commerce platform increasing sales of programs by 20%</li>
             <li>Streamlined courses by integrating video content building circuit boards utilizing controllers and sensors with Arduino hardware and software</li>
         </ul>
-        <a href="https://roboyantrix.com" class="button" target="_blank">roboyantrix.com</a>
+        <a href="https://roboyantrix.com" class="sitelinks" target="_blank">roboyantrix.com</a>
         <br/>
         <b><i>Gym-o-Gym</i></b>
         <ul>
@@ -120,7 +134,7 @@ MacID: Caii2
             <li>Research and produced STEM based projects that engaged summer camp participants aged 3-11, teaching the design and engineering process.</li>
             <li>Demonstrated patience, responsibility and attention to detail, being responsible for large cohorts of students, supervising and leading through projects and events</li>
         </ul>
-        <a href="https://gymogym.com" class="button" target="_blank">gymogym.com</a>
+        <a href="https://gymogym.com" class="sitelinks" target="_blank">gymogym.com</a>
     </section>
     <section id="Hobbies">
         <h2>Hobbies</h2>
